--- a/src/template.html
+++ b/src/template.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>To-Do</title>
 </head>
 <body>
-
+    <div class ="main">
+        <div class="menu"></div>
+        <div class="line1"></div>
+        <div class="mainFieldContainer">
+            <div class="workspaceBar"></div>
+            <div class="line2"></div>
+            <div class="mainField"></div>
+        </div>
+    </div>
 </body>
 </html>
